--- a/Classroom/Classroom.csproj
+++ b/Classroom/Classroom.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\css\" />
-    <Folder Include="wwwroot\js\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
   <ItemGroup>
