--- a/Classroom/Classroom.csproj
+++ b/Classroom/Classroom.csproj
@@ -12,4 +12,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Registration\" />
+  </ItemGroup>
+
 </Project>
