--- a/Classroom/Classroom.csproj
+++ b/Classroom/Classroom.csproj
@@ -5,15 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Registration\**" />
+    <Content Remove="Views\Registration\**" />
+    <EmbeddedResource Remove="Views\Registration\**" />
+    <None Remove="Views\Registration\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\Registration\" />
   </ItemGroup>
 
 </Project>
