Smthing big added

--- a/Classroom/Classroom.csproj
+++ b/Classroom/Classroom.csproj
@@ -25,4 +25,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\usersFiles\" />
+    <Folder Include="wwwroot\tasksFiles\" />
+  </ItemGroup>
+
 </Project>
